# zen-ide

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES  Zen IDE.linux.spec  Zen IDE.spec  entitlements.plist  pyproject.toml  zen  zen-ide  zen-ide.desktop  zen_icon.icns
.githooks/: pre-push
.github/workflows/: build.yml  release.yml  sync-wiki.yml
docs/: 2026_01_04_intellisense_completion_kinds_plan.md  2026_01_18_unicode.md  2026_01_22_ai_strategy.md  2026_01_22_navigation.md  2026_01_25_ai_setup_guide.md  2026_01_25_settings_live_reload.md  2026_01_25_slack_integration_idea.md  2026_02_08_dev_pad.md  2026_02_08_dialog_system.md  2026_02_08_diff_view.md  2026_02_08_focus_manager.md  2026_02_08_gtk_editor_roadmap.md  2026_02_08_intellisense.md  2026_02_08_neovim_themes.md  2026_02_12_settings_reference.md  2026_02_15_arc.md  2026_02_15_sketch_pad.md  2026_02_17_filesystem_centralisation.md  2026_02_18_terminal_aliases.md  2026_02_19_indent_system.md  2026_02_20_status_bar.md  2026_02_20_supported_formats.md  2026_02_20_syntax_highlighting.md  2026_02_20_terminal.md  2026_02_20_tree_view.md  2026_02_27_startup.md  2026_03_03_compilation_startup.md  2026_03_03_custom_themes.md  2026_03_03_debugging.md  2026_03_03_incremental_edit.md  2026_03_03_polling_mechanisms.md  2026_03_03_zen_ide_user_directory.md  2026_03_04_ai_inline_completion.md  2026_03_04_ui_testing.md  2026_03_05_codebase_audit.md  2026_03_05_visual_glitch_analysis.md  2026_03_06_cairo_migration.md  2026_03_07_ai_chat_scroll_stability_plan.md  2026_03_08_inline_completion_comparison.md  2026_03_09_ai_driven_development_slides.md  (+22 more)
docs/standards/: ai_agents.md  build_workflow.md  centralization.md  code_style.md  (+7 more)
src/: app_modules.py  app_preload.py  constants.py  gi_requirements.py  zen_ide.py  zen_ide_app.py  zen_ide_window.py
tests/: conftest.py
tools/: create_icon.py  gen_icns.sh  generate_release_notes.py  open_pr  profile_sash_drag.py  subset_icon_font.py  trim_icu_data.py
(+617 files in other folders)
