[tool.ruff]
line-length = 125
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F"]
ignore = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "zen-ide"
version = "0.1.4"
description = "A minimalist opinionated IDE for general purpose code development"
requires-python = ">=3.14"
authors = [{name = "Zen IDE Contributors"}]
dependencies = [
    "PyGObject>=3.50.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-WebKit>=10.0; sys_platform == 'darwin'",
    "watchfiles>=1.0.0",
    "PyYAML>=6.0.0",
    "cmarkgfm>=2024.0.0",
    "psutil>=5.9.0",
    "ruff>=0.4.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-hcl>=1.2.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0.0", "nuitka>=2.0.0", "ordered-set", "zstandard", "Pillow>=10.0.0"]
dev = ["pytest>=8.0.0", "pyautogui>=0.9.54", "PyGObject-stubs>=2.17.0"]

# System dependencies (not pip-installable, documented here as source of truth)
# These are installed via Makefile targets that read from this list
[tool.zen-ide.system-deps]
gtk-linux = [
    "libgirepository1.0-dev",
    "libgirepository-2.0-dev",
    "libcairo2-dev",
    "python3-gi",
    "python3-gi-cairo",
    "gir1.2-gtk-4.0",
    "gir1.2-gtksource-5",
    "gir1.2-adw-1",
    "gir1.2-vte-3.91",
    "gir1.2-webkit2-4.1",
]
gtk-macos = [
    "gtk4",
    "gtksourceview5",
    "vte3",
    "gobject-introspection",
    "libadwaita",
    "pkg-config",
]

[tool.uv]
python-preference = "managed"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["gui: marks tests that require GUI"]
filterwarnings = ["ignore::DeprecationWarning"]
